# incubator

./: .bazelrc  .envrc  .gitignore  .tool-versions  BUILD  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  bazel-incubator  bazel-projects  go.mod  repositories.bzl  requirements.in  requirements_lock.txt
foreign_cc/: repositories.bzl
infra/: main.tf  mindman.auto.tfvars  outputs.tf  variables.tf
infra/modules/ci/: main.tf  outputs.tf  variables.tf
infra/modules/ci/templates/: pgbouncer.ini.tpl  userlist.txt.tpl
infra/modules/common/: main.tf  outputs.tf  variables.tf
python/: deps.bzl  pip_install.bzl  repositories.bzl
rust/: deps.bzl
scripts/: cargo-add  cargo-raze  cargo-raze.sh  cargo-rm  cargo-update  update-python-deps  update-python-deps.sh  update_go_deps.sh  update_python_deps.sh
test/: BUILD  BUILD.bazel  test_fake.py
tools/python/: BUILD.bazel  setup.cfg
tools/rules/pytest/: BUILD.bazel  defs.bzl  pytest_wrapper.py
