load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_rust//rust:defs.bzl", "rust_analyzer")

# gazelle:prefix github.com/jmileson/incubator
gazelle(name = "gazelle")

rust_analyzer(
    name = "rust_analyzer",
    targets = [
        # use the following to generate the list of targets::
        # bazel query 'kind("rust_*library|rust_binary", //...:all)'
    ],
)



