# Mandatory (or Cargo tooling is unhappy)
[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[workspace]
members = []

[package.metadata.raze]
default_gen_buildrs = false
genmode = "Remote"
package_aliases_dir = "cargo"
targets = [
  "x86_64-unknown-linux-gnu",
]
workspace_path = "//third_party/cargo"
